ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0, 6.3.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.3
    • Execution Team 2023-03-06
    • 120
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With empty time-series options, collMod can fail but this isn't consistent with behaviour in v6.0 where we do nothing if timeseries options = {}. 

      Here is where we return the error: https://github.com/10gen/mongo/blob/master/src/mongo/db/timeseries/timeseries_options.cpp#L117-L119 

            Assignee:
            Fausto Leyva (Inactive)
            Reporter:
            Fausto Leyva (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: