SERVER-74507 Gracefully handle empty time-series options in collMod

(cherry picked from commit 5035fde474f8aadfd50dc39d8a6e8619d97cb33f)